@@ -1,4 +1,4 @@
-# https://travis-ci.org/ryanss/python-holidays
+# https://travis-ci.org/dr-prodigy/python-holidays
 
 language: python
 
