@@ -1,4 +1,5 @@
 Copyright (c) 2014-2017 <ryanssdev@icloud.com>
+Copyright (c) 2018 <maurizio.montel@gmail.com>
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
